--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     
     <div class="doboz">
-        <p>* Környezeti változók használata (<a href="">Bpt_environment.txt</a>)</p>
+        <p>* Környezeti változók használata (<a href="https://barsonyj.github.io/help/bpt/Bpt_environment.txt">Bpt_environment.txt</a>)</p>
     </div>
 
 </body>
