--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             border: 1px solid grey;
             border-radius: 5px;
             box-shadow: 2px 2px 5px black;
-            padding: 10px;
+            padding: 5px 10px;
         }
         a {
             text-decoration: none;
